--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -170,7 +170,7 @@ Items in the `Groceries` dataset proliferate into a Tesco's list of branded vari
 
 ## Ordering relevance through personhood or thinghood?
 
-Combinatorial surplus, however, does not exhaust what might be found in the data. The relevancy model that DunnHumby implemented for Tesco (as for so many other  businesses) seeks to balance the tensions between proliferating associations and relative closure. It responds to the problem of finding an ordering in which the propensities of things as commodities and the propensities of people mingle with each other, without overflowing  the site of their  ordering encounter, the list.[^181.1] Big data discourse in its promissory mode  attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schönberger_2013]. As Turow and co-authors conclude in their account of transformation of retail space: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public force' [@Turow_2015, 476]. 
+Combinatorial surplus, however, does not exhaust what might be found in the data. The relevancy model that DunnHumby implemented for Tesco (as for so many other  businesses) seeks to balance the tensions between proliferating associations and relative closure. It responds to the problem of finding an ordering in which the propensities of things as commodities and the propensities of people mingle with each other, without overflowing  the site of their  ordering encounter, the list.[^181.1] Big data discourse in its promissory mode  attributes potency to personalization: 'most important, using big data we hope to identify specific individuals rather than groups' [@Mayer-Schonberger_2013]. As Turow and co-authors conclude in their account of transformation of retail space: 'through it all, knowingly and not, and away from the spotlights of fierce social debate, retailers are encouraging daily routines that accept data-driven personalization as a centrifugal public force' [@Turow_2015, 476]. 
 
 Mark Hansen offers a different perspective on what might happen in these ordering encounters. Hansen attributes 'real potential' to data. Hansen attributes an associative propensity to data:
 
@@ -188,7 +188,7 @@ include_graphics('figure/patel_compares_models.png')
 
 Patel described the data that Tesco keeps on grocery purchases: 'We have 52 weeks of purchase data for each customer.' These transformations have been widely discussed in the context of big data, where questions of who has how much data are usually most prominent (see [@Kitchin_2014]). In terms of the ways that lists order the world, the amount of data is not perhaps not so important as the way in which list-making is re-ordered via a model of personhood. Patel introduced the new relevancy model with a graph familiar to machine learners and statistical modellers. (A sketch of her graph appears in Figure \@ref(fig:models).)  The graph plots the _precision_ -- the proportion of the recommended products that customers actually purchase -- for several different models. In Hansen's media theoretical terms, the graph indexes the 'causal efficacy' of the recommender system, its capacity to include and transform propensities or 'real potentialities' into operational knowledge.   The graph compares the old rule-based recommender systems with some of the relevancy-model alternatives -- logistic regression, random forests, and a few others -- in terms of their predictions and how those predictions turned out. Patel dismissed most of the models quite quickly and focused only on one, the logistic regression model, which did better than other alternatives. Why did she say little about the model, which after all, produces the probabilistic predictions on which everything in the recommendation list depends and hence the conversion experience? Her interest lay in the precision of the recommendations, and, crucially for our purposes, in how 'most of the gain comes from thinking of good features.'
 
-The models Patel so briefly mentioned are all classifiers, predictive models that spatially order  variables in a dataset as a high dimensional vector space. Operating in the vector space, models classify people and events. Much of the operational formation of the classifier models received scant reference in Patel's presentation. It is likely that in DunnHumby's models the classifying model at the heart of the recommender system constructs a decision boundary in vector space between points that belong to different classes of things [@Mackenzie_2015]. The classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a class is expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned. In becoming predictive, the 'Have You Forgotten?' recommendations have included a version of the social in the form of a  model that seeks to identify relations between variables.  The relevance of recommendations pivots on the apprehension of social order by a model. 
+The models Patel so briefly mentioned are all classifiers, predictive models that spatially order  variables in a dataset as a high dimensional vector space. Operating in the vector space, models classify people and events. Much of the operational formation of the classifier models received scant reference in Patel's presentation. It is likely that in DunnHumby's models the classifying model at the heart of the recommender system constructs a decision boundary in vector space between points that belong to different classes of things [@Mackenzie_2015e]. The classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a class is expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned. In becoming predictive, the 'Have You Forgotten?' recommendations have included a version of the social in the form of a  model that seeks to identify relations between variables.  The relevance of recommendations pivots on the apprehension of social order by a model. 
 
 
 ## Sparsity: output 20 recommendations from 200,000 products
